--- a/app/views/blood_gulcose_readings/show.html.haml
+++ b/app/views/blood_gulcose_readings/show.html.haml
@@ -1,7 +1,7 @@
 %p#notice= notice
 %p
   %strong User:
-  = @blood_gulcose_reading.user_id
+  = @blood_gulcose_reading.user_name
 %p
   %strong Value:
   = @blood_gulcose_reading.value
