--- a/app/views/blood_gulcose_readings/_form.html.haml
+++ b/app/views/blood_gulcose_readings/_form.html.haml
@@ -8,7 +8,7 @@
         - blood_gulcose_reading.errors.full_messages.each do |message|
           %li= message
   .field
-    = form.label :date, form.object.date.strftime("%d/%m/%Y")
+    = form.label :date, form.object.date.strftime(date_format_string)
   .field
     = form.label :value
     = form.number_field :value, min: -9, max: 9
