--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,5 @@
-%p#notice= notice
 %h1 Users
-%table
+%table.table.table-hover-effect
   %thead
     %tr
       %th First name
@@ -14,7 +13,7 @@
         %td= user.last_name
         %td= user.email
         %td= link_to 'Show', user
-        %td= link_to 'Edit', edit_user_path(user)
+        -# %td= link_to 'Edit', edit_user_path(user)
         %td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = link_to 'New User', new_user_registration_path
