--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,29 +1,55 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :first_name
-    %br/
-    = f.text_field :first_name, autofocus: true
-  .field
-    = f.label :last_name
-    %br/
-    = f.text_field :last_name
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+%h2.text-center.m-5 Sign up
+%section.col-8.offset-2.col-sm-6.offset-sm-3
+  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = render "devise/shared/error_messages", resource: resource
+    .field
+      = f.label :first_name
+      %br/
+      = f.text_field :first_name, autofocus: true, class: 'form-control m-2'
+    .field
+      = f.label :last_name
+      %br/
+      = f.text_field :last_name, class: 'form-control m-2'
+    .field
+      = f.label :email
+      %br/
+      = f.email_field :email, autocomplete: "email", class: 'form-control m-2'
+    .field
+      = f.label :password
+      - if @minimum_password_length
+        %em
+          (#{@minimum_password_length} characters minimum)
+      %br/
+      = f.password_field :password, autocomplete: "new-password", class: 'form-control m-2'
+    .field
+      = f.label :password_confirmation
+      %br/
+      = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control m-2'
+    .actions
+      = f.submit "Sign up", class: 'btn btn-primary m-2'
+  %hr/
+  = render "devise/shared/links"
+
+-# %h2.text-center.m-5 Sign up
+-# %section.col-8.offset-2.col-sm-6.offset-sm-3
+-#   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+-#     = render "devise/shared/error_messages", resource: resource
+-#     .field
+-#       = f.label :email
+-#       %br/
+-#       = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control m-2'
+-#     .field
+-#       = f.label :password
+-#       - if @minimum_password_length
+-#         %em
+-#           (#{@minimum_password_length} characters minimum)
+-#       %br/
+-#       = f.password_field :password, autocomplete: "new-password", class: 'form-control m-2'
+-#     .field
+-#       = f.label :password_confirmation
+-#       %br/
+-#       = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control m-2'
+-#     .actions
+-#       = f.submit "Sign up", class: 'btn btn-primary m-2'
+-#   %hr/
+-#   = render "users/shared/links"
