--- a/app/assets/stylesheets/blood_gulcose_readings.scss
+++ b/app/assets/stylesheets/blood_gulcose_readings.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the BloodGulcoseReadings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.pull-right {
+  float: right !important;
+}
+.value-field{
+  width: 4rem;
+  margin-left: 1rem;
+}
