--- a/app/views/blood_gulcose_readings/index.html.haml
+++ b/app/views/blood_gulcose_readings/index.html.haml
@@ -23,4 +23,6 @@
         %td= link_to 'Show', blood_gulcose_reading
         -# %td= link_to 'Edit', edit_blood_gulcose_reading_path(blood_gulcose_reading), remote: true
         %td= link_to 'Destroy', blood_gulcose_reading, method: :delete, data: { confirm: 'Are you sure?' }
+.clearfix
+= paginate @blood_gulcose_readings
 #readings_form
