--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -21,7 +21,7 @@ a:visited {
 
 a:hover {
   color: #fff;
-  background-color: #000; }
+  background-color: darkgray; }
 
 th {
   padding-bottom: 5px; }
